--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <option value="10">2 - 10%</option>
     <option value="15">3 - 15%</option>
     <option value="20">4 - 20%</option>
-    <option value="25">5 - 25%</option>
+    <option value="25" selected>5 - 25%</option>
     <option value="30">6 - 30%</option>
     <option value="35">7 - 35%</option>
     <option value="40">8 - 40%</option>
