--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <option value="10">2 - 10%</option>
     <option value="15">3 - 15%</option>
     <option value="20">4 - 20%</option>
-    <option value="25" selected>5 - 25%</option>
+    <option value="25" selected>5 - 25%</option> <!-- پیش‌فرض -->
     <option value="30">6 - 30%</option>
     <option value="35">7 - 35%</option>
     <option value="40">8 - 40%</option>
@@ -115,7 +115,7 @@
 
   <label for="referral">Referral Level:</label>
   <select id="referral">
-    <option value="20">1 - 20%</option>
+    <option value="20" selected>1 - 20%</option> <!-- پیش‌فرض -->
     <option value="25">2 - 25%</option>
     <option value="30">3 - 30%</option>
     <option value="35">4 - 35%</option>
@@ -162,8 +162,8 @@ function calculate() {
 
     document.getElementById('result').innerHTML = `
       Your net price: ${netPrice.toFixed(2)}<br>
-      Break-even price (+5%): ${breakEvenPrice.toFixed(2)}<br>
-Net price without fee: ${netWithoutFee.toFixed(2)}<br>
+Break-even price (+5%): ${breakEvenPrice.toFixed(2)}<br>
+      Net price without fee: ${netWithoutFee.toFixed(2)}<br>
       Fee amount: ${feeAmount.toFixed(2)}
     `;
 }
