--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Net Price Calculator</title>
+
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     background-color: #1e1e1e;
     color: #f5f5f7;
     margin: 0;
-    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +19,7 @@
 
   .container {
     background-color: #2c2c2e;
-    padding: 25px 25px;
+    padding: 25px;
     border-radius: 20px;
     width: 320px;
     box-shadow: 0 6px 20px rgba(0,0,0,0.4);
@@ -29,13 +29,11 @@
     text-align: center;
     margin-bottom: 20px;
     font-size: 22px;
-    font-weight: 600;
   }
 
   label {
     display: block;
     margin: 12px 0 6px;
-    font-weight: 500;
   }
 
   input, select {
@@ -45,15 +43,10 @@
     border-radius: 12px;
     border: 1px solid #555;
     background-color: #3a3a3c;
-    color: #f5f5f7;
+    color: #fff;
     font-size: 15px;
     margin-bottom: 12px;
     box-sizing: border-box;
-  }
-
-  input:focus, select:focus {
-    border-color: #0a84ff;
-    outline: none;
   }
 
   button {
@@ -62,41 +55,28 @@
     border-radius: 14px;
     border: none;
     background-color: #0a84ff;
-    color: white;
+    color: #fff;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
     margin-top: 10px;
   }
 
-  button:hover {
-    background-color: #0066d6;
-  }
-
   .result {
     margin-top: 18px;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 600;
     text-align: center;
-    line-height: 1.5;
-  }
-
-  /* Remove number input arrows */
-  input::-webkit-outer-spin-button,
-  input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-  }
-  input[type=number] {
-      -moz-appearance: textfield;
+    line-height: 1.6;
   }
 </style>
 </head>
+
 <body>
 <div class="container">
   <h1>Net Price Calculator</h1>
 
-  <label for="price">Price (with 5% fee):</label>
+  <label for="price">Price (incl. 5% Fee):</label>
   <input type="number" id="price" placeholder="Enter total price" step="0.01">
 
   <label for="cashback">Cashback Level:</label>
@@ -105,8 +85,8 @@
     <option value="10">2 - 10%</option>
     <option value="15">3 - 15%</option>
     <option value="20">4 - 20%</option>
-    <option value="25" selected>5 - 25%</option> <!-- پیش‌فرض -->
-    <option value="30">6 - 30%</option>
+    <option value="25">5 - 25%</option>
+    <option value="30" selected>6 - 30%</option>
     <option value="35">7 - 35%</option>
     <option value="40">8 - 40%</option>
     <option value="45">9 - 45%</option>
@@ -115,57 +95,54 @@
 
   <label for="referral">Referral Level:</label>
   <select id="referral">
-    <option value="20" selected>1 - 20%</option> <!-- پیش‌فرض -->
+    <option value="20">1 - 20%</option>
     <option value="25">2 - 25%</option>
     <option value="30">3 - 30%</option>
     <option value="35">4 - 35%</option>
     <option value="40">5 - 40%</option>
-    <option value="50">6 - 50%</option>
+    <option value="50" selected>6 - 50%</option>
   </select>
 
   <button onclick="calculate()">Calculate</button>
 
   <div class="result" id="result">
-    Your net price: -<br>
-    Break-even price (+5%): -<br>
-    Net price without fee: -<br>
-    Fee amount: -
+    Net Price: -<br>
+    Break-even Price (+5% Fee): -<br>
+    Base Price (No Fee): -<br>
+    Fee Amount: -
   </div>
 </div>
 
 <script>
+function round(num) {
+  return Math.round(num * 100) / 100;
+}
+
 function calculate() {
-    let priceWithFee = parseFloat(document.getElementById('price').value);
-    let cashback = parseFloat(document.getElementById('cashback').value);
-    let referral = parseFloat(document.getElementById('referral').value);
+  const price = parseFloat(document.getElementById('price').value);
+  const cashback = parseFloat(document.getElementById('cashback').value);
+  const referral = parseFloat(document.getElementById('referral').value);
 
-    if (isNaN(priceWithFee)) {
-      alert('Please enter a valid price');
-      return;
-    }
+  if (isNaN(price) || price <= 0) {
+    alert('Please enter a valid positive price');
+    return;
+  }
 
-    // 1. Net price without fee
-    let netWithoutFee = priceWithFee / 1.05;
+  const basePrice = round(price * 0.95);
+  const feeAmount = round(price - basePrice);
 
-    // 2. Fee amount
-    let feeAmount = priceWithFee - netWithoutFee;
+  const totalPercent = cashback + referral;
+  const discountOnFee = round(feeAmount * totalPercent / 100);
 
-    // 3. Discounts on fee only
-    let totalPercent = cashback + referral;
-    let discountOnFee = feeAmount * totalPercent / 100;
+  const netPrice = round(basePrice + (feeAmount - discountOnFee));
+  const breakEvenPrice = round(netPrice * 1.05);
 
-    // 4. Net price final = netWithoutFee + (feeAmount - discountOnFee)
-    let netPrice = netWithoutFee + (feeAmount - discountOnFee);
-
-    // 5. Break-even price = netPrice + 5% fee
-    let breakEvenPrice = netPrice * 1.05;
-
-    document.getElementById('result').innerHTML = `
-      Your net price: ${netPrice.toFixed(2)}<br>
-Break-even price (+5%): ${breakEvenPrice.toFixed(2)}<br>
-      Net price without fee: ${netWithoutFee.toFixed(2)}<br>
-      Fee amount: ${feeAmount.toFixed(2)}
-    `;
+  document.getElementById('result').innerHTML = `
+    Net Price: ${netPrice.toFixed(2)}<br>
+    Break-even Price (+5% Fee): ${breakEvenPrice.toFixed(2)}<br>
+    Base Price (No Fee): ${basePrice.toFixed(2)}<br>
+    Fee Amount: ${feeAmount.toFixed(2)}
+  `;
 }
 </script>
 </body>
