--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
 <style>
   body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     background-color: #1e1e1e;
     color: #f5f5f7;
     margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +21,7 @@
 
   .container {
     background-color: #2c2c2e;
-    padding: 25px;
+    padding: 25px 25px;
     border-radius: 20px;
     width: 320px;
     box-shadow: 0 6px 20px rgba(0,0,0,0.4);
@@ -29,11 +31,13 @@
     text-align: center;
     margin-bottom: 20px;
     font-size: 22px;
+    font-weight: 600;
   }
 
   label {
     display: block;
     margin: 12px 0 6px;
+    font-weight: 500;
   }
 
   input, select {
@@ -43,10 +47,15 @@
     border-radius: 12px;
     border: 1px solid #555;
     background-color: #3a3a3c;
-    color: #fff;
+    color: #f5f5f7;
     font-size: 15px;
     margin-bottom: 12px;
     box-sizing: border-box;
+  }
+
+  input:focus, select:focus {
+    border-color: #0a84ff;
+    outline: none;
   }
 
   button {
@@ -55,19 +64,33 @@
     border-radius: 14px;
     border: none;
     background-color: #0a84ff;
-    color: #fff;
+    color: white;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
     margin-top: 10px;
   }
 
+  button:hover {
+    background-color: #0066d6;
+  }
+
   .result {
     margin-top: 18px;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 600;
     text-align: center;
-    line-height: 1.6;
+    line-height: 1.5;
+  }
+
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type=number] {
+    -moz-appearance: textfield;
   }
 </style>
 </head>
@@ -114,28 +137,38 @@
 </div>
 
 <script>
-function round(num) {
-  return Math.round(num * 100) / 100;
+/* ===== Config ===== */
+const FEE_RATE = 0.05;
+
+/* ===== Utils ===== */
+const round2 = n => Math.round(n * 100) / 100;
+
+/* ===== Pure Logic ===== */
+function calculatePricing(price, cashback, referral) {
+  const basePrice = round2(price * (1 - FEE_RATE));
+  const feeAmount = round2(price - basePrice);
+
+  const discountRate = (cashback + referral) / 100;
+  const netPrice = round2(basePrice + feeAmount * (1 - discountRate));
+  const breakEvenPrice = round2(netPrice * (1 + FEE_RATE));
+
+  return { basePrice, feeAmount, netPrice, breakEvenPrice };
 }
 
+/* ===== Controller ===== */
 function calculate() {
   const price = parseFloat(document.getElementById('price').value);
-  const cashback = parseFloat(document.getElementById('cashback').value);
-  const referral = parseFloat(document.getElementById('referral').value);
 
   if (isNaN(price) || price <= 0) {
     alert('Please enter a valid positive price');
     return;
   }
 
-  const basePrice = round(price * 0.95);
-  const feeAmount = round(price - basePrice);
+  const cashback = parseFloat(document.getElementById('cashback').value);
+  const referral = parseFloat(document.getElementById('referral').value);
 
-  const totalPercent = cashback + referral;
-  const discountOnFee = round(feeAmount * totalPercent / 100);
-
-  const netPrice = round(basePrice + (feeAmount - discountOnFee));
-  const breakEvenPrice = round(netPrice * 1.05);
+  const { basePrice, feeAmount, netPrice, breakEvenPrice } =
+    calculatePricing(price, cashback, referral);
 
   document.getElementById('result').innerHTML = `
     Net Price: ${netPrice.toFixed(2)}<br>
