--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   .container {
     background-color: #2c2c2e;
-    padding: 25px 25px;
+    padding: 25px;
     border-radius: 20px;
     width: 320px;
     box-shadow: 0 6px 20px rgba(0,0,0,0.4);
@@ -56,6 +56,18 @@
   input:focus, select:focus {
     border-color: #0a84ff;
     outline: none;
+  }
+
+  /* Fix select arrow on desktop, keep iOS fine */
+  select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding-right: 36px;
+    background-image: url("data:image/svg+xml;utf8,<svg fill='%23aaa' height='20' viewBox='0 0 24 24' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    background-size: 18px;
   }
 
   button {
@@ -99,7 +111,7 @@
 <div class="container">
   <h1>Net Price Calculator</h1>
 
-  <label for="price">Price (incl. 5% Fee):</label>
+  <label for="price">Price (+5% Fee):</label>
   <input type="number" id="price" placeholder="Enter total price" step="0.01">
 
   <label for="cashback">Cashback Level:</label>
@@ -137,13 +149,13 @@
 </div>
 
 <script>
-/* ===== Config ===== */
+/* Config */
 const FEE_RATE = 0.05;
 
-/* ===== Utils ===== */
+/* Utils */
 const round2 = n => Math.round(n * 100) / 100;
 
-/* ===== Pure Logic ===== */
+/* Logic */
 function calculatePricing(price, cashback, referral) {
   const basePrice = round2(price * (1 - FEE_RATE));
   const feeAmount = round2(price - basePrice);
@@ -155,7 +167,7 @@ function calculatePricing(price, cashback, referral) {
   return { basePrice, feeAmount, netPrice, breakEvenPrice };
 }
 
-/* ===== Controller ===== */
+/* Controller */
 function calculate() {
   const price = parseFloat(document.getElementById('price').value);
 
